Updated basic config and added some dic strings

--- a/test_config.ini
+++ b/test_config.ini
@@ -3,5 +3,8 @@ consumer_key =
 access_key =
 
 [secrets]
-consumer_secret = 
-access_secret = 
+consumer_secret =
+access_secret =
+
+[output]
+output_file =
