Updated script and example config

--- a/test_config.ini
+++ b/test_config.ini
@@ -8,3 +8,6 @@ access_secret =
 
 [output]
 output_file =
+
+[keywords]
+keywords = Midterm,Vote,Politics,District,Senator,Congress,elect,Representative,Sen,Rep,Republican,Democrat,Dem,Rep,Gov,Debates,Poli,GOP,Ballot,Register,Incumbent,Delegate,Potus,Scotus,Supreme court,GA,KS,TX,NE,KY,MO,MS,CA,TN,FL,SD,OK,Georgia,Kansas,Texas,Nebraska,Kentucky,Missouri,Mississippi,California,Tennessee,Florida,South Dakota,Oklahoma
